# seige

./: .env.example  .gitignore  Dockerfile  README.md  RUNPOD_GUIDE.md  __init__.py  client.py  colab_sft.ipynb  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_pipeline.sh
.agent/skills/RL_environment/: SKILL.md
client/: __init__.py  client.py
data/: direction_library.json  sft_dataset.jsonl
environment/: __init__.py  actions.py  constants.py  curriculum.py  direction_library.py  env.py  executor.py  observations.py  openenv_environment.py  rewards.py  secrets_bank.py  state.py  target_system.py  tasks.py
notebooks/: seige_training_colab.ipynb
plan/: Improvement.md  RedBlueArena_Design.md  RedBlueArena_Implementation_Spec.md  plan.md
scripts/: demo.py  env_server.py  evaluate.py  generate_sft_dataset.py  make_colab_notebook.py  opponent_server.py  precompute_directions.py  run_grpo.py  smoke_server.py  train_whitebox_tools.py  upload_adapter_to_hf.py
server/: __init__.py  app.py
tests/: conftest.py  test_actions.py  test_curriculum.py  test_env.py  test_openenv_shape.py  test_rewards.py  test_whitebox_tools.py
train/: __init__.py  grpo_blue.py  grpo_red.py  sft.py  unsloth_config.py
