[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seige"
version = "0.1.0"
description = "Adversarial oversight environment with Red and Blue RL agents."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
hf = [
    "torch>=2.2.0",
    "transformers>=4.51.0",
    "scikit-learn>=1.4.0",
]
train = [
    "trl>=0.8.0",
    "peft>=0.10.0",
    "wandb>=0.16.0",
    "unsloth @ git+https://github.com/unslothai/unsloth.git",
]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["environment*", "server*", "client*", "train*"]
exclude = ["plan*", "data*", "outputs*", "tests*"]
