[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seige"
version = "0.1.0"
description = "Adversarial oversight environment with Red and Blue RL agents."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "openenv-core>=0.2.3",
    "openenv>=0.1.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
hf = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "transformers==5.5.0",
    "scikit-learn==1.8.0",
]
train = [
    "trl==0.24.0",
    "peft==0.19.1",
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "datasets==4.3.0",
    "wandb==0.26.1",
    "unsloth @ git+https://github.com/unslothai/unsloth.git",
]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["environment*", "server*", "client*", "train*"]
exclude = ["plan*", "data*", "outputs*", "tests*"]

[tool.setuptools]
py-modules = ["models"]
